fix vertical alignment of navbar items

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -52,6 +52,7 @@ header#main-header {
         font-size: 50px;
         text-align: right;
         margin: 0px;
+        vertical-align: middle;
     
         &:hover {
             text-decoration: none;
